V2.0.12.0
- gapp: fix OV2 export, the settings were not saved correctly

V2.0.11.0
- gapp: fix action builder when date is empty within flow
- gappsf: fix action builder when date is empty within flow

V2.0.10.0
- gapp: update live api references
- gappsf: update live api references

V2.0.9.0
- gapp: fix for export to Garmin for GGZ file

V2.0.8.0
- gapp: fix for Import My Finds, added wait time between ech fetch log call

V2.0.7.0
- gapp: reverted change for updating logs of geocache of V2.0.6.0
- gapp: updated to new Live API limits (retrieving logs and notes)
- gapp: added Giga-Event geocache type
- gappsf: added Giga-Event geocache type
- gapp: replaced IE with CEF browser in Search within Area plugin
- gapp: fix for import pocket queries

V2.0.6.0
- gapp: change for updating logs of geocache
- gapp: fix for edit geocache template.
- gapp: updated the Live API service
- gapp: change, some tool bar icons were scaled

V2.0.5.0
- gapp: fix Google Map for geocaches with corrected coords
- gapp: change, main window menu image items are not scaled any more
- gappsf: version check now done at new website (same as gapp)

V2.0.4.0
- gapp: fix icons in toolbar

V2.0.3.0
- gapp: fix auto start actions after startup
- gapp: change: Garmin POI export, replacement of characters altered
- gapp: script, added get favorites from globalcaching.eu script

V2.0.2.0
- gapp: requires .NET 4.5.1
- gapp: most IE browsers are replaced with CEF
- gapp: several bug fixes
- gapp: changed way of handling background tasks (async/await)
- gapp: settings are now located in 1 database with automatic fallback to backup if needed (replaced settings folders)
- gapp: setup has been changed
- gapp: all plugins and scripts are available after installation (no package manager any more)

V1.11.0.0
- gapp: add: Added GeoSpy support
- gappsf: add: Added GeoSpy support

V1.10.9.0
- gapp: fix: Cache list refresh when showing cache list after it has been closed